# fim-one

./: .all-contributorsrc  .dockerignore  .gitignore  .translation-cache.json  CLAUDE.md  DEPS_TO_ADD.txt  Dockerfile  LICENSE  README.de.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  example.env  pyproject.toml  start.sh
.claude/: settings.local.json
.github/workflows/: test.yml
dev/: cc-insights-test-guide.md  roadshow-demo-setup.md
docs/: changelog.mdx  docs.json  extension-guide.mdx  faq.mdx  gt-lock.json  index.mdx  openapi.json  quickstart.mdx  roadmap.mdx  why.mdx
docs/api/: authentication.mdx  overview.mdx
docs/architecture/: agent-discovery.mdx  connector-architecture.mdx  context-management.mdx  dag-engine.mdx  design-philosophy.mdx  hook-system.mdx  llm-provider-guide.mdx  market.mdx  organization.mdx  philosophy.mdx  planning-landscape.mdx  react-engine.mdx  system-overview.mdx
docs/concepts/: ai-builder.mdx  artifacts.mdx  document-processing.mdx  eval-center.mdx  execution-modes.mdx  market.mdx
docs/configuration/: database.mdx  environment-variables.mdx  model-management.mdx  models.mdx  oauth-providers.mdx
docs/configuration/channels/: feishu.mdx  overview.mdx
docs/connectors/: xinchuang-databases.mdx
docs/de/: changelog.mdx  design-philosophy.mdx  extension-guide.mdx  faq.mdx  index.mdx  quickstart.mdx  roadmap.mdx  why.mdx
docs/de/api/: authentication.mdx  overview.mdx
docs/de/architecture/: agent-discovery.mdx  connector-architecture.mdx  context-management.mdx  dag-engine.mdx  design-philosophy.mdx  hook-system.mdx  llm-provider-guide.mdx  market.mdx  organization.mdx  philosophy.mdx  planning-landscape.mdx  react-engine.mdx  system-overview.mdx
docs/de/concepts/: ai-builder.mdx  artifacts.mdx  document-processing.mdx  eval-center.mdx  execution-modes.mdx  market.mdx
docs/de/configuration/: database.mdx  environment-variables.mdx  model-management.mdx  models.mdx  oauth-providers.mdx
docs/de/connectors/: xinchuang-databases.mdx
docs/de/strategy/: competitive-landscape.mdx  integration-paradigms.mdx  orthogonality-strategy.mdx
docs/dev/: api-docs-plan.md
docs/fr/: changelog.mdx  design-philosophy.mdx  extension-guide.mdx  faq.mdx  index.mdx  quickstart.mdx  roadmap.mdx  why.mdx
docs/fr/api/: authentication.mdx  overview.mdx
docs/fr/architecture/: agent-discovery.mdx  connector-architecture.mdx  context-management.mdx  dag-engine.mdx  design-philosophy.mdx  hook-system.mdx  llm-provider-guide.mdx  market.mdx  organization.mdx  philosophy.mdx  planning-landscape.mdx  react-engine.mdx  system-overview.mdx
docs/fr/concepts/: ai-builder.mdx  artifacts.mdx  document-processing.mdx  eval-center.mdx  execution-modes.mdx  market.mdx
docs/fr/configuration/: database.mdx  environment-variables.mdx  model-management.mdx  models.mdx  oauth-providers.mdx
docs/fr/connectors/: xinchuang-databases.mdx
docs/fr/strategy/: competitive-landscape.mdx  integration-paradigms.mdx  orthogonality-strategy.mdx
docs/ja/: changelog.mdx  design-philosophy.mdx  extension-guide.mdx  faq.mdx  index.mdx  quickstart.mdx  roadmap.mdx  why.mdx
docs/ja/api/: authentication.mdx  overview.mdx
docs/ja/architecture/: agent-discovery.mdx  connector-architecture.mdx  context-management.mdx  dag-engine.mdx  design-philosophy.mdx  hook-system.mdx  llm-provider-guide.mdx  market.mdx  organization.mdx  philosophy.mdx  planning-landscape.mdx  react-engine.mdx  system-overview.mdx
docs/ja/concepts/: ai-builder.mdx  artifacts.mdx  document-processing.mdx  eval-center.mdx  execution-modes.mdx  market.mdx
docs/ja/configuration/: database.mdx  environment-variables.mdx  model-management.mdx  models.mdx  oauth-providers.mdx
docs/ja/connectors/: xinchuang-databases.mdx
docs/ja/strategy/: competitive-landscape.mdx  integration-paradigms.mdx  orthogonality-strategy.mdx
docs/ko/: changelog.mdx  design-philosophy.mdx  extension-guide.mdx  faq.mdx  index.mdx  quickstart.mdx  roadmap.mdx  why.mdx
docs/ko/api/: authentication.mdx  overview.mdx
docs/ko/architecture/: agent-discovery.mdx  connector-architecture.mdx  context-management.mdx  dag-engine.mdx  design-philosophy.mdx  hook-system.mdx  llm-provider-guide.mdx  market.mdx  organization.mdx  philosophy.mdx  react-engine.mdx  (+2 more)
docs/strategy/: competitive-landscape.mdx  integration-paradigms.mdx  orthogonality-strategy.mdx
docs/zh/: changelog.mdx  design-philosophy.mdx  extension-guide.mdx  faq.mdx  index.mdx  quickstart.mdx  roadmap.mdx  why.mdx
examples/: quickstart.py  web_ui.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
scripts/: export_openapi.py  seed_workflow_examples.py  setup-hooks.sh  test_xinchuang_dbs.py  translate.py
scripts/hooks/: pre-commit
scripts/validate-mdx/: .gitignore  pnpm-lock.yaml
src/fim_agent/: __init__.py
tests/: conftest.py  test_agent_fork.py  test_auto_routing.py  test_blueprint_diff.py  test_cache_observability.py  test_channel_model.py  test_channels_api.py  test_compact.py  test_connector_config_loader.py  test_connector_meta_tool.py  test_context_guard.py  test_document_processor.py  test_export.py  test_feishu_channel.py  test_feishu_gate_hook.py  test_grounded_retrieve.py  test_grounding.py  test_hooks_bootstrap.py  test_http_request.py  test_market_connection_dep_subscribe.py  test_market_unsubscribe_cascade.py  test_markitdown_tool.py  test_mcp_security.py  test_metrics.py  test_model.py  test_multi_model.py  test_multi_worker.py  test_native_function_calling.py  test_notifications.py  test_openapi_parser.py  test_pinned_messages.py  test_planner.py  test_rate_limit.py  test_rate_limit_per_user.py  test_react.py  test_react_harness.py  test_react_self_reflection.py  test_reasoning_replay_policy.py  test_replan.py  test_request_tools.py  (+24 more)
tests/test_database_connector/: test_kingbasees_driver.py
wiki/: CHANGELOG.md  Competitive-Landscape.md  Connector-Architecture.md  Execution-Modes.md  Home.md  Philosophy.md  Planning-Landscape.md  Roadmap.md
(+726 files in other folders)
