[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fim-one"
version = "0.1.0"
description = "LLM-powered Agent Runtime with dynamic DAG planning and concurrent execution"
readme = "README.md"
license = "LicenseRef-FIM-One"
requires-python = ">=3.11"
authors = [
    { name = "fim-ai", email = "dev@fim.ai" },
]
keywords = ["agent", "llm", "dag", "rag", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.80",
    "openai>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "simpleeval>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "bcrypt>=4.0",
    "pyjwt>=2.0",
]
mcp = [
    "mcp>=1.0",
]
files = [
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "markitdown[docx,xlsx,pptx]>=0.1",
    "Markdown>=3.4",
    "reportlab>=4.0",
]
rag = [
    "lancedb>=0.6",
    "pyarrow>=14.0",
]
redis = [
    "redis>=5.0",
]
postgres = [
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
]
database = [
    "sqlparse>=0.5",
    "cryptography>=44.0",
    "aiomysql>=0.2",
]

[project.urls]
Homepage = "https://github.com/fim-ai/fim-one"
Repository = "https://github.com/fim-ai/fim-one"
Issues = "https://github.com/fim-ai/fim-one/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fim_one"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "docker: mark test as requiring a running Docker daemon",
]
